edition = "2023";

package ginbot.proto;

option go_package = "github.com/lasikuu/GinBot/pkg/gen/ginbot/proto";

import "ginbot/proto/platform.proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;

service InstanceService {
  rpc GetInstance(GetInstanceReq) returns (GetInstanceResp);
  rpc ListInstances(ListInstancesReq) returns (ListInstancesResp);
  rpc CreateInstance(CreateInstanceReq) returns (CreateInstanceResp);
  rpc UpdateInstance(UpdateInstanceReq) returns (google.protobuf.Empty);
  rpc DeleteInstance(DeleteInstanceReq) returns (google.protobuf.Empty);
}

message Instance {
  // Internal Instance ID
  int64 id = 1;
  // Instance enum
  Platform platform_enum = 2;
  // Instance meta information such as Server ID etc.
  google.protobuf.Struct instance_meta = 3;
  // Default channel for the instance (if applicable) for announcements etc.
  string default_channel = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message GetInstanceReq {
  // Internal Instance ID
  int64 id = 1;
}

message GetInstanceResp {
  Instance instance = 1;
}

message ListInstancesReq {
  int64 offset = 1;
  int64 limit = 2;
}

message ListInstancesResp {
  repeated Instance instances = 1;
}

message CreateInstanceReq {
  // Instance enum
  Platform platform_enum = 1;
  // Instance meta information such as Server ID etc.
  google.protobuf.Struct instance_meta = 2;
  // Default channel for the instance (if applicable) for announcements etc.
  string default_channel = 3;
}

message CreateInstanceResp {
  // Internal Instance ID
  int64 id = 1;
}

message UpdateInstanceReq {
  // Internal Instance ID
  int64 id = 1;
  // Instance enum
  Platform platform_enum = 2;
  // Instance meta information such as Server ID etc.
  google.protobuf.Struct instance_meta = 3;
  // Default channel for the instance (if applicable) for announcements etc.
  string default_channel = 4;
}

message DeleteInstanceReq {
  // Internal Instance ID
  int64 id = 1;
}
